bugfix notes not showing up

--- a/style.less
+++ b/style.less
@@ -213,6 +213,14 @@ body {
                     &.right  { transform: rotateY(90deg)  translateZ(calc(var(--size) / 2)); }
                     &.top    { transform: rotateX(90deg)  translateZ(calc(var(--size) / 2)); }
                     &.bottom { transform: rotateX(-90deg) translateZ(calc(var(--size) / 2)); }
+
+                    &.bomb               {  background-image: url('assets/bomb.svg');            }
+                    &.dot_front_blue     {  background-image: url('assets/dot_front_blue.svg');  }
+                    &.dot_front_red      {  background-image: url('assets/dot_front_red.svg');   }
+                    &.note_front_blue    {  background-image: url('assets/note_front_blue.svg'); }
+                    &.note_front_red     {  background-image: url('assets/note_front_red.svg');  }
+                    &.note_side_blue     {  background-image: url('assets/note_side_blue.svg');  }
+                    &.note_side_red      {  background-image: url('assets/note_side_red.svg');   }
                 }
     
                 &.error .note-face { outline: 2px solid red;    }
